| 2.2.0   | all PHP versions until 5.3.9
| 2.1.0   | all PHP versions until 5.3.8
|===========================


== Version 2.25.0 _(2013-mm-dd)_

.Additions and changes:
* update mongo reference to 1.4.5
* update varnish reference to 1.1.1
* add new jsmin reference (0.1.1)
* fixed the test skeleton template now unit test suites used shared fixtures

.Bug fixes:
* GH-105: detect PHP-5.4 feature : Short array syntax


== Version 2.24.0 _(2013-10-17)_

.Additions and changes:
* update imagick reference to 3.1.2
* update mongo reference to 1.4.4
* update xhprof reference to 0.9.4
* update varnish reference to 1.1.0
* update zip reference to 1.12.1
* update xcache reference to 3.1.0
* update zend opcache reference to 7.0.3-dev bundled in PHP 5.5.5
* convert test case classes from standard fixtures to shared fixtures
* DYN (lazy loader) is now rules completed. May be used in production
* tests suites may be now run with default memory limit
* _extension not available_ message is received by all PHPUnit test listeners
* add a new PHPUnit test listener useful to know what reference is loaded and tested
* add composer support (GH-102 request)
* raise PHP_Reflect dependency to 1.9.0
* detect more constants (when used as argument in function signature/call)

.Bug fixes:
* none


== Version 2.23.1 _(2013-09-23)_

.Additions and changes:
* none

.Bug fixes:
* GH-101: about json constants and pdf function in unit tests (Thanks to Remi Collet)


== Version 2.23.0 _(2013-09-19)_

.Additions and changes:
* add 3 new extensions: htscanner, PDFlib, Rar
* update APCu reference to 4.0.2
* update pthreads reference to 0.0.45
* introduces an experimental `DYN` lazy loader references ( NOT YET OPERATIONAL, missing rules implementations )
* drop support of PHP4 reference
* drop support of PHP 5.2

.Bug fixes:
* none


== Version 2.22.0 _(2013-08-22)_

.Additions and changes:
* phar _--version_ switch now print the latest version rather than DEV