@@ -5,4 +5,5 @@ Additions and changes:
 - fixed the test skeleton template now unit test suites used shared fixtures
 
 Bug fixes:
-- GH-105: detect PHP-5.4 feature : Short array syntax
+- GH-105: detect PHP-5.4 feature : Short array syntax declaration
+- GH-106: detect PHP-5.4 feature : Short array syntax on function call
