@@ -1,0 +1,9 @@
+<?php
+function foo($array) {
+    print_r($array);
+}
+
+foo([]);
+foo([1]);
+foo([1,2]);
+foo([1,2,3]);
