@@ -44,7 +44,8 @@ include::attributes.txt[]
 * fixed the test skeleton template now unit test suites used shared fixtures
 
 .Bug fixes:
-* GH-105: detect PHP-5.4 feature : Short array syntax
+* GH-105: detect PHP-5.4 feature : Short array syntax declaration
+* GH-106: detect PHP-5.4 feature : Short array syntax on function call
 
 
 == Version 2.24.0 _(2013-10-17)_
